--- a/11-spring-mqtt/pom.xml
+++ b/11-spring-mqtt/pom.xml
@@ -10,9 +10,9 @@
         <!-- lookup parent from repository -->
     </parent>
     <groupId>de.thi.inf.sesa</groupId>
-    <artifactId>rest-service-example</artifactId>
+    <artifactId>mqtt-service-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>rest-service-example</name>
+    <name>mqtt-service-example</name>
     <description>Demo project for Spring Boot</description>
     <dependencies>
         <dependency>
@@ -41,26 +41,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.hamcrest</groupId>
-                    <artifactId>hamcrest-core</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.12.3</version>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.0</version>
         </dependency>
     </dependencies>
 
